[project]
name = "tomoshika-kif-app"
version = "0.1.0"
description = ""
authors = [{ name = "ikumyn1or0", email = "19ming3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "ruff (>=0.12.4,<0.13.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A004",
    "B905",
    "COM812",
    "D100",
    "D400",
    "DOC201",
    "D415",
    "DTZ007",
    "ERA001",
    "E402",
    "E501",
    "FBT001", "FBT002",
    "CPY001",
    "N803", "N806", "N812",
    "N815",
    "N816",
    "PLR2004",
    "PLR0904", "PLR0913", "PLR0914", "PLR0917",
    "RUF001",
    "RUF002",
    "TID252",
    "TD002", "TD003", "FIX002"
]
